// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checker asciidoc checker snapshots "./src/test/inputs/commented-sample-with-error.asciidoc": ./src/test/inputs/commented-sample-with-error.asciidoc 1`] = `
{
  "logs": [
    "---- BEGIN FILE ./src/test/inputs/commented-sample-with-error.asciidoc
",
    "Found 2 code samples in ./src/test/inputs/commented-sample-with-error.asciidoc",
    "BEGIN #././src/test/inputs/commented-sample-with-error.asciidoc:7 (--filter commented-sample-with-error-7)
",
    "💥 ./src/test/inputs/commented-sample-with-error.asciidoc:7:7-12: Unexpected TypeScript error: Type 'string' is not assignable to type 'number'.",
    "const value: number = "123";",
    "tsconfig options: {"strictNullChecks":true,"module":1}",
    "
END #././src/test/inputs/commented-sample-with-error.asciidoc:7 (--- ms)
",
    "BEGIN #././src/test/inputs/commented-sample-with-error.asciidoc:17 (--filter commented-sample-with-error-17)
",
    "💥 ././src/test/inputs/commented-sample-with-error.asciidoc:17: Unexpected TypeScript error: Type 'string' is not assignable to type 'number'.",
    "const value: number = "123";
console.log(value);
//          ^? const value: number",
    "tsconfig options: {"strictNullChecks":true,"module":1}",
    "
END #././src/test/inputs/commented-sample-with-error.asciidoc:17 (--- ms)
",
    "---- END FILE ./src/test/inputs/commented-sample-with-error.asciidoc
",
  ],
  "statuses": [
    "1/1: ././src/test/inputs/commented-sample-with-error.asciidoc",
    "1/1: ././src/test/inputs/commented-sample-with-error.asciidoc: 1/2 ././src/test/inputs/commented-sample-with-error.asciidoc:7",
    "1/1: ././src/test/inputs/commented-sample-with-error.asciidoc: 2/2 ././src/test/inputs/commented-sample-with-error.asciidoc:17",
  ],
}
`;

exports[`checker asciidoc checker snapshots "./src/test/inputs/empty-twoslash.asciidoc": ./src/test/inputs/empty-twoslash.asciidoc 1`] = `
{
  "logs": [
    "---- BEGIN FILE ./src/test/inputs/empty-twoslash.asciidoc
",
    "Found 1 code samples in ./src/test/inputs/empty-twoslash.asciidoc",
    "BEGIN #././src/test/inputs/empty-twoslash.asciidoc:7 (--filter empty-twoslash-7)
",
    "Code passed type checker.",
    "💥 ./src/test/inputs/empty-twoslash.asciidoc:15:1-13: Failed type assertion for \`fetchANumber\`
  Expected: 
    Actual: function fetchANumber(input: RequestInfo | URL, init?: RequestInit | undefined): Promise<number>",
    "  0/1 twoslash type assertions matched.",
    "async function fetchANumber(...args: Parameters<typeof fetch>): Promise<number> {
  const response = await fetch(...args);
  const num = Number(await response.text());
  if (isNaN(num)) {
    throw new Error(\`Response was not a number.\`);
  }
  return num;
}
fetchANumber
// ^?",
    "tsconfig options: {"strictNullChecks":true,"module":1}",
    "
END #././src/test/inputs/empty-twoslash.asciidoc:7 (--- ms)
",
    "---- END FILE ./src/test/inputs/empty-twoslash.asciidoc
",
  ],
  "statuses": [
    "1/1: ././src/test/inputs/empty-twoslash.asciidoc",
    "1/1: ././src/test/inputs/empty-twoslash.asciidoc: 1/1 ././src/test/inputs/empty-twoslash.asciidoc:7",
  ],
}
`;

exports[`checker asciidoc checker snapshots "./src/test/inputs/equivalent.asciidoc": ./src/test/inputs/equivalent.asciidoc 1`] = `
{
  "logs": [
    "---- BEGIN FILE ./src/test/inputs/equivalent.asciidoc
",
    "Found 4 code samples in ./src/test/inputs/equivalent.asciidoc",
    "BEGIN #././src/test/inputs/equivalent.asciidoc:8 (--filter equivalent-8)
",
    "Code passed type checker.",
    "Twoslash type assertion match:",
    "  Expected: type T = keyof Point",
    "    Actual: type T = keyof Point",
    "  1/1 twoslash type assertions matched.",
    "
END #././src/test/inputs/equivalent.asciidoc:8 (--- ms)
",
    "BEGIN #././src/test/inputs/equivalent.asciidoc:23 (--filter equivalent-23)
",
    "Code passed type checker.",
    "Twoslash type assertion match:",
    "  Expected: type T = keyof Point",
    "    Actual: type T = keyof Point",
    "Twoslash type assertion match:",
    "  Expected: type T2 = keyof Point",
    "    Actual: type T2 = keyof Point",
    "Twoslash type assertion match:",
    "  Expected: type SynthT2 = "x" | "y"",
    "    Actual: type SynthT2 = "x" | "y"",
    "  3/3 twoslash type assertions matched.",
    "
END #././src/test/inputs/equivalent.asciidoc:23 (--- ms)
",
    "BEGIN #././src/test/inputs/equivalent.asciidoc:31 (--filter equivalent-31)
",
    "Code passed type checker.",
    "Twoslash type assertion match:",
    "  Expected: type T = keyof Point",
    "    Actual: type T = keyof Point",
    "Twoslash type assertion match:",
    "  Expected: type T2 = keyof Point",
    "    Actual: type T2 = keyof Point",
    "💥 ./src/test/inputs/equivalent.asciidoc:34:6-13: Failed type assertion for \`SynthT2\`
  Expected: type SynthT2 = "x" | "y" | "z"
    Actual: type SynthT2 = "x" | "y"",
    "  2/3 twoslash type assertions matched.",
    "interface Point {
  x: number;
  y: number;
}

type T = keyof Point;
//   ^? type T = keyof Point
type T2 = keyof Point;
//   ^? type T2 = keyof Point
type Resolve<Raw> = Raw extends Function ? Raw : {[K in keyof Raw]: Raw[K]};
type SynthT2 = Resolve<T2>;
//   ^? type SynthT2 = "x" | "y" | "z"
",
    "tsconfig options: {"strictNullChecks":true,"module":1}",
    "
END #././src/test/inputs/equivalent.asciidoc:31 (--- ms)
",
    "BEGIN #././src/test/inputs/equivalent.asciidoc:39 (--filter equivalent-39)
",
    "Code passed type checker.",
    "Twoslash type assertion match:",
    "  Expected: type T = keyof Point",
    "    Actual: type T = keyof Point",
    "Twoslash type assertion match:",
    "  Expected: type T2 = keyof Point",
    "    Actual: type T2 = keyof Point",
    "💥 ./src/test/inputs/equivalent.asciidoc:42:6-13: Failed type assertion for \`SynthT2\`
  Expected: type SynthT2 = "x" | "y" | "z"
    Actual: type SynthT2 = "x" | "y"",
    "  2/3 twoslash type assertions matched.",
    "interface Point {
  x: number;
  y: number;
}

type T = keyof Point;
//   ^? type T = keyof Point
type T2 = keyof Point;
//   ^? type T2 = keyof Point
type Resolve<Raw> = Raw extends Function ? Raw : {[K in keyof Raw]: Raw[K]};
type SynthT2 = Resolve<T2>;
//   ^? type SynthT2 = "x" | "y" | "z"
",
    "tsconfig options: {"strictNullChecks":true,"module":1}",
    "
END #././src/test/inputs/equivalent.asciidoc:39 (--- ms)
",
    "---- END FILE ./src/test/inputs/equivalent.asciidoc
",
  ],
  "statuses": [
    "1/1: ././src/test/inputs/equivalent.asciidoc",
    "1/1: ././src/test/inputs/equivalent.asciidoc: 1/4 ././src/test/inputs/equivalent.asciidoc:8",
    "1/1: ././src/test/inputs/equivalent.asciidoc: 2/4 ././src/test/inputs/equivalent.asciidoc:23",
    "1/1: ././src/test/inputs/equivalent.asciidoc: 3/4 ././src/test/inputs/equivalent.asciidoc:31",
    "1/1: ././src/test/inputs/equivalent.asciidoc: 4/4 ././src/test/inputs/equivalent.asciidoc:39",
  ],
}
`;

exports[`checker asciidoc checker snapshots "./src/test/inputs/prepend-and-skip.asciidoc": ./src/test/inputs/prepend-and-skip.asciidoc 1`] = `
{
  "logs": [
    "---- BEGIN FILE ./src/test/inputs/prepend-and-skip.asciidoc
",
    "Found 2 code samples in ./src/test/inputs/prepend-and-skip.asciidoc",
    "BEGIN #././src/test/inputs/prepend-and-skip.asciidoc:13 (--filter prepend-and-skip-13)
",
    "matched errors:",
    "  expected:  Cannot redeclare block-scoped variable 'shared'. b.ts",
    "    actual: Cannot redeclare block-scoped variable 'shared'.",
    "  error messages could not be matched!",
    "matched errors:",
    "  expected:  Cannot redeclare block-scoped variable 'shared'.",
    "    actual: Cannot redeclare block-scoped variable 'shared'.",
    "  error messages could not be matched!",
    "Matched 2/2 errors.",
    "
END #././src/test/inputs/prepend-and-skip.asciidoc:13 (--- ms)
",
    "---- END FILE ./src/test/inputs/prepend-and-skip.asciidoc
",
  ],
  "statuses": [
    "1/1: ././src/test/inputs/prepend-and-skip.asciidoc",
    "1/1: ././src/test/inputs/prepend-and-skip.asciidoc: 1/2 ././src/test/inputs/prepend-and-skip.asciidoc:6",
    "1/1: ././src/test/inputs/prepend-and-skip.asciidoc: 2/2 ././src/test/inputs/prepend-and-skip.asciidoc:13",
  ],
}
`;

exports[`checker asciidoc checker snapshots "./src/test/inputs/president.asciidoc": ./src/test/inputs/president.asciidoc 1`] = `
{
  "logs": [
    "---- BEGIN FILE ./src/test/inputs/president.asciidoc
",
    "Found 2 code samples in ./src/test/inputs/president.asciidoc",
    "BEGIN #././src/test/inputs/president.asciidoc:7 (--filter president-7)
",
    "Code passed type checker.",
    "💥 ./src/test/inputs/president.asciidoc:9:7-16: Failed type assertion for \`president\`
  Expected: const president: { first: string; last: string; middle?: string; }
    Actual: const president: {
    middle?: string | undefined;
    first: string;
    last: string;
}",
    "  0/1 twoslash type assertions matched.",
    "declare let hasMiddle: boolean;
const firstLast = {first: 'Harry', last: 'Truman'};
const president = {...firstLast, ...(hasMiddle ? {middle: 'S'} : {})};
//    ^? const president: {
//         first: string;
//         last: string;
//         middle?: string;
//       }",
    "tsconfig options: {"strictNullChecks":true,"module":1}",
    "
END #././src/test/inputs/president.asciidoc:7 (--- ms)
",
    "BEGIN #././src/test/inputs/president.asciidoc:21 (--filter president-21)
",
    "Code passed type checker.",
    "💥 ./src/test/inputs/president.asciidoc:23:7-16: Failed type assertion for \`const president = {...firstLast, ...(hasMiddle ? {middle: 'S'} : {})};\` (tested \`president\`)
  Expected: { first: string; last: string; middle?: string; }
    Actual: { middle?: string | undefined; first: string; last: string; }",
    "  0/1 type assertions matched.",
    "declare let hasMiddle: boolean;
const firstLast = {first: 'Harry', last: 'Truman'};
const president = {...firstLast, ...(hasMiddle ? {middle: 'S'} : {})};
// Type is { first: string; last: string; middle?: string; }",
    "tsconfig options: {"strictNullChecks":true,"module":1}",
    "
END #././src/test/inputs/president.asciidoc:21 (--- ms)
",
    "---- END FILE ./src/test/inputs/president.asciidoc
",
  ],
  "statuses": [
    "1/1: ././src/test/inputs/president.asciidoc",
    "1/1: ././src/test/inputs/president.asciidoc: 1/2 ././src/test/inputs/president.asciidoc:7",
    "1/1: ././src/test/inputs/president.asciidoc: 2/2 ././src/test/inputs/president.asciidoc:21",
  ],
}
`;

exports[`extractSamples snapshot: backticks 1`] = `
[
  {
    "checkJS": false,
    "content": "function greet(who: string) {
  console.log('Hello', who);
}",
    "descriptor": "./backticks.asciidoc:3",
    "id": "greet-ts",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 4,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "backticks.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "export const Example = () => <div />;",
    "descriptor": "./backticks.asciidoc:12",
    "id": "greet-tsx",
    "isTSX": false,
    "language": "tsx",
    "lineNumber": 13,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "backticks.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "console.log("end of file");",
    "descriptor": "./backticks.asciidoc:27",
    "id": "backticks-27",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 26,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "backticks.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: backticks-disabled 1`] = `[]`;

exports[`extractSamples snapshot: commented-sample 1`] = `
[
  {
    "checkJS": false,
    "content": "function somethingDangerous() {}",
    "descriptor": "./commented-sample.asciidoc:7",
    "id": "commented-sample-7",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 6,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "commented-sample.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "let val = null;  // Type is any
try {
  somethingDangerous();
  val = 12;
  val  // Type is number
} catch (e) {
  console.warn('alas!');
}
val  // Type is number | null",
    "descriptor": "./commented-sample.asciidoc:13",
    "id": "commented-sample-13",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 12,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "commented-sample-7",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "commented-sample.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: commented-sample-with-error 1`] = `
[
  {
    "checkJS": false,
    "content": "const value: number = "123";",
    "descriptor": "./commented-sample-with-error.asciidoc:7",
    "id": "commented-sample-with-error-7",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 6,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "commented-sample-with-error.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "console.log(value);
//          ^? const value: number",
    "descriptor": "./commented-sample-with-error.asciidoc:17",
    "id": "commented-sample-with-error-17",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 16,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "commented-sample-with-error-7",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "commented-sample-with-error.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: doc1 1`] = `
[
  {
    "checkJS": false,
    "content": "function greet(who: string) {
  console.log('Hello', who);
}",
    "descriptor": "./doc1.asciidoc:3",
    "id": "greet-ts",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 5,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "doc1.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: empty-twoslash 1`] = `
[
  {
    "checkJS": false,
    "content": "async function fetchANumber(...args: Parameters<typeof fetch>): Promise<number> {
  const response = await fetch(...args);
  const num = Number(await response.text());
  if (isNaN(num)) {
    throw new Error(\`Response was not a number.\`);
  }
  return num;
}
fetchANumber
// ^?",
    "descriptor": "./empty-twoslash.asciidoc:7",
    "id": "empty-twoslash-7",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 6,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "empty-twoslash.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: equivalent 1`] = `
[
  {
    "checkJS": false,
    "content": "interface Point {
  x: number;
  y: number;
}

type T = keyof Point;
//   ^? type T = keyof Point",
    "descriptor": "./equivalent.asciidoc:8",
    "id": "equivalent-8",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 7,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "equivalent.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "type T2 = keyof Point;
//   ^? type T2 = keyof Point (equivalent to "x" | "y")",
    "descriptor": "./equivalent.asciidoc:23",
    "id": "equivalent-23",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 22,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "equivalent-8",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "equivalent.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "type T2 = keyof Point;
//   ^? type T2 = keyof Point (equivalent to "x" | "y" | "z")",
    "descriptor": "./equivalent.asciidoc:31",
    "id": "equivalent-31",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 30,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "equivalent-8",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "equivalent.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "type T2 = keyof Point;
//   ^? type T2 = keyof Point
//      (equivalent to "x" | "y" | "z")",
    "descriptor": "./equivalent.asciidoc:39",
    "id": "equivalent-39",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 38,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "equivalent-8",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "equivalent.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: inline-replacement 1`] = `
[
  {
    "checkJS": false,
    "content": "function calculateAge(birthDate: Date): number {
  // ...
}",
    "descriptor": "./inline-replacement.asciidoc:6",
    "id": "inline-replacement-6",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 5,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": "calculate-age-replacement",
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "inline-replacement.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "function calculateAge(birthDate: Date): number {
  // COMPRESS
  return 0;
  // END
}",
    "descriptor": "./inline-replacement.asciidoc:12",
    "id": "calculate-age-replacement",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 14,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "inline-replacement.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "function calculateAge(birthDate: string): number {
  // ...
}",
    "descriptor": "./inline-replacement.asciidoc:28",
    "id": "inline-replacement-28",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 27,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": "calculate-age-replacement",
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "inline-replacement.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: multilinetype 1`] = `
[
  {
    "checkJS": false,
    "content": "const o = {x: 1, y: 2};
// type is {
//   x: number;
//   y: number;
// }",
    "descriptor": "./multilinetype.asciidoc:4",
    "id": "multilinetype-4",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 3,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "multilinetype.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "function addWithExtras(a: number, b: number) {
  const c = a + b;  // type is number
  // ...
  return c;
}",
    "descriptor": "./multilinetype.asciidoc:14",
    "id": "multilinetype-14",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 13,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "multilinetype.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: noid 1`] = `
[
  {
    "checkJS": false,
    "content": "console.log('Hello', 'TS');",
    "descriptor": "./noid.asciidoc:10",
    "id": "noid-10",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 9,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "noid.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: prepend 1`] = `
[
  {
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "descriptor": "./prepend.asciidoc:2",
    "id": "prefix",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 4,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "descriptor": "./prepend.asciidoc:8",
    "id": "combined",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 10,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "prefix",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "descriptor": "./prepend.asciidoc:16",
    "id": "final",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 18,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: prepend-and-skip 1`] = `
[
  {
    "checkJS": false,
    "content": "// a.ts
const shared = "Cher";
//    ~~~~~~
// Cannot redeclare block-scoped variable 'shared'.",
    "descriptor": "./prepend-and-skip.asciidoc:6",
    "id": "prepend-and-skip-6",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 5,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": true,
    "sourceFile": "prepend-and-skip.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "// b.ts
const shared = "Cher";
//    ~~~~~~
// Cannot redeclare block-scoped variable 'shared'.",
    "descriptor": "./prepend-and-skip.asciidoc:13",
    "id": "prepend-and-skip-13",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 12,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "prepend-and-skip-6",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend-and-skip.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: prepend-multiple 1`] = `
[
  {
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "descriptor": "./prepend-multiple.asciidoc:4",
    "id": "prepend-multiple-4",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 3,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend-multiple.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "type ABC = AB | 'c';",
    "descriptor": "./prepend-multiple.asciidoc:10",
    "id": "prepend-multiple-10",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 9,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "prepend-multiple-4",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend-multiple.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "const c: ABC = 'c';",
    "descriptor": "./prepend-multiple.asciidoc:15",
    "id": "prepend-multiple-15",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 14,
    "nodeModules": [],
    "prefixes": [
      {
        "id": "prepend-multiple-4",
      },
      {
        "id": "prepend-multiple-10",
      },
    ],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "prepend-multiple.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: president 1`] = `
[
  {
    "checkJS": false,
    "content": "declare let hasMiddle: boolean;
const firstLast = {first: 'Harry', last: 'Truman'};
const president = {...firstLast, ...(hasMiddle ? {middle: 'S'} : {})};
//    ^? const president: {
//         first: string;
//         last: string;
//         middle?: string;
//       }",
    "descriptor": "./president.asciidoc:7",
    "id": "president-7",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 6,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "president.asciidoc",
    "tsOptions": {},
  },
  {
    "checkJS": false,
    "content": "declare let hasMiddle: boolean;
const firstLast = {first: 'Harry', last: 'Truman'};
const president = {...firstLast, ...(hasMiddle ? {middle: 'S'} : {})};
// Type is { first: string; last: string; middle?: string; }",
    "descriptor": "./president.asciidoc:21",
    "id": "president-21",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 20,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": false,
    "sourceFile": "president.asciidoc",
    "tsOptions": {},
  },
]
`;

exports[`extractSamples snapshot: skip 1`] = `
[
  {
    "checkJS": false,
    "content": "keyof A&B = (keyof A) | (keyof B)",
    "descriptor": "./skip.asciidoc:4",
    "id": "skip-4",
    "isTSX": false,
    "language": "ts",
    "lineNumber": 3,
    "nodeModules": [],
    "prefixes": [],
    "prefixesLength": 0,
    "replacementId": undefined,
    "sectionHeader": null,
    "skip": true,
    "sourceFile": "skip.asciidoc",
    "tsOptions": {},
  },
]
`;
